--- a/_examples/goDemo.html
+++ b/_examples/goDemo.html
@@ -9,7 +9,24 @@
         div{
             width:100%;
         }
+        .viewBox{
+            width: 400px;
+            height: 800px;
+            float: left;
+            overflow: hidden;
+            position: relative;
+        }
+        .viewCon{
+            width: 320px;
+            height: 565px;
+            background-color: #fff;
+            word-break: break-all;
+            position: absolute;
+            left: 30px;
+            top: 120px;
+        }
     </style>
+    <script type="application/javascript" src="../b-static/jquery.min.js"></script>
 </head>
 <body>
 <div>
@@ -52,6 +69,14 @@
     <button onclick="deleteEditor()">
         删除编辑器</button>
 </div>
+
+<div class="viewBox">
+    <img src="http://www.weituibao.com/img/ebill/iphone.png.pagespeed.ce.3O5pWwQvCV.png" width="375">
+    <div class="viewCon">
+        <iframe src="" id="J_iframe" frameborder="no" style="border:0;width:320px;height:561px;overflow:auto;overflow-x:hidden;"></iframe>
+    </div>
+</div>
+
     <script type="text/javascript" charset="utf-8" src="../ueditor/ueditor.config.js"></script>
     <script type="text/javascript" charset="utf-8" src="../ueditor/b-build/js/ueditor.min.js"> </script>
     <!--建议手动加在语言，避免在ie下有时因为加载语言失败导致编辑器加载失败-->
@@ -62,8 +87,16 @@
 
     //实例化编辑器
     //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
-    var ue = UE.getEditor('editor').setHeight(300);
+    var ue = UE.getEditor('editor');
+    ue.ready(function(){
+        UE.getEditor('editor').addListener('selectionchange',function(){
+            $('#J_iframe').contents().find('html').html(UE.getEditor('editor').getAllHtml());
+        });
+    });
 
+    UE.getEditor('editor').addListener('selectionchange',function(){
+        $('#J_iframe').contents().find('html').html(UE.getEditor('editor').getAllHtml());
+    });
 
     function isFocus(e){
         alert(UE.getEditor('editor').isFocus());
